@@ -1,3 +1,0 @@
-Python bindings for the GObjects using introspection
-
-This package contains the last version supporting Python 2.x.
