@@ -1,94 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/01/28 14:00:29 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/PyGObject-${PKGVERSION}.egg-info
-${PYSITELIB}/gi/__init__.py
-${PYSITELIB}/gi/__init__.pyc
-${PYSITELIB}/gi/__init__.pyo
-${PYSITELIB}/gi/_compat.py
-${PYSITELIB}/gi/_compat.pyc
-${PYSITELIB}/gi/_compat.pyo
-${PYSITELIB}/gi/_constants.py
-${PYSITELIB}/gi/_constants.pyc
-${PYSITELIB}/gi/_constants.pyo
-${PYSITELIB}/gi/_error.py
-${PYSITELIB}/gi/_error.pyc
-${PYSITELIB}/gi/_error.pyo
-${PYSITELIB}/gi/_gi.so
-${PYSITELIB}/gi/_gi_cairo.so
-${PYSITELIB}/gi/_gtktemplate.py
-${PYSITELIB}/gi/_gtktemplate.pyc
-${PYSITELIB}/gi/_gtktemplate.pyo
-${PYSITELIB}/gi/_option.py
-${PYSITELIB}/gi/_option.pyc
-${PYSITELIB}/gi/_option.pyo
-${PYSITELIB}/gi/_ossighelper.py
-${PYSITELIB}/gi/_ossighelper.pyc
-${PYSITELIB}/gi/_ossighelper.pyo
-${PYSITELIB}/gi/_propertyhelper.py
-${PYSITELIB}/gi/_propertyhelper.pyc
-${PYSITELIB}/gi/_propertyhelper.pyo
-${PYSITELIB}/gi/_signalhelper.py
-${PYSITELIB}/gi/_signalhelper.pyc
-${PYSITELIB}/gi/_signalhelper.pyo
-${PYSITELIB}/gi/docstring.py
-${PYSITELIB}/gi/docstring.pyc
-${PYSITELIB}/gi/docstring.pyo
-${PYSITELIB}/gi/importer.py
-${PYSITELIB}/gi/importer.pyc
-${PYSITELIB}/gi/importer.pyo
-${PYSITELIB}/gi/module.py
-${PYSITELIB}/gi/module.pyc
-${PYSITELIB}/gi/module.pyo
-${PYSITELIB}/gi/overrides/GIMarshallingTests.py
-${PYSITELIB}/gi/overrides/GIMarshallingTests.pyc
-${PYSITELIB}/gi/overrides/GIMarshallingTests.pyo
-${PYSITELIB}/gi/overrides/GLib.py
-${PYSITELIB}/gi/overrides/GLib.pyc
-${PYSITELIB}/gi/overrides/GLib.pyo
-${PYSITELIB}/gi/overrides/GObject.py
-${PYSITELIB}/gi/overrides/GObject.pyc
-${PYSITELIB}/gi/overrides/GObject.pyo
-${PYSITELIB}/gi/overrides/Gdk.py
-${PYSITELIB}/gi/overrides/Gdk.pyc
-${PYSITELIB}/gi/overrides/Gdk.pyo
-${PYSITELIB}/gi/overrides/GdkPixbuf.py
-${PYSITELIB}/gi/overrides/GdkPixbuf.pyc
-${PYSITELIB}/gi/overrides/GdkPixbuf.pyo
-${PYSITELIB}/gi/overrides/Gio.py
-${PYSITELIB}/gi/overrides/Gio.pyc
-${PYSITELIB}/gi/overrides/Gio.pyo
-${PYSITELIB}/gi/overrides/Gtk.py
-${PYSITELIB}/gi/overrides/Gtk.pyc
-${PYSITELIB}/gi/overrides/Gtk.pyo
-${PYSITELIB}/gi/overrides/Pango.py
-${PYSITELIB}/gi/overrides/Pango.pyc
-${PYSITELIB}/gi/overrides/Pango.pyo
-${PYSITELIB}/gi/overrides/__init__.py
-${PYSITELIB}/gi/overrides/__init__.pyc
-${PYSITELIB}/gi/overrides/__init__.pyo
-${PYSITELIB}/gi/overrides/keysyms.py
-${PYSITELIB}/gi/overrides/keysyms.pyc
-${PYSITELIB}/gi/overrides/keysyms.pyo
-${PYSITELIB}/gi/pygtkcompat.py
-${PYSITELIB}/gi/pygtkcompat.pyc
-${PYSITELIB}/gi/pygtkcompat.pyo
-${PYSITELIB}/gi/repository/__init__.py
-${PYSITELIB}/gi/repository/__init__.pyc
-${PYSITELIB}/gi/repository/__init__.pyo
-${PYSITELIB}/gi/types.py
-${PYSITELIB}/gi/types.pyc
-${PYSITELIB}/gi/types.pyo
-${PYSITELIB}/pygtkcompat/__init__.py
-${PYSITELIB}/pygtkcompat/__init__.pyc
-${PYSITELIB}/pygtkcompat/__init__.pyo
-${PYSITELIB}/pygtkcompat/generictreemodel.py
-${PYSITELIB}/pygtkcompat/generictreemodel.pyc
-${PYSITELIB}/pygtkcompat/generictreemodel.pyo
-${PYSITELIB}/pygtkcompat/pygtkcompat.py
-${PYSITELIB}/pygtkcompat/pygtkcompat.pyc
-${PYSITELIB}/pygtkcompat/pygtkcompat.pyo
